--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "googleapis": "^144.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.4",
+    "resend": "^4.1.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
