--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
     "react-toastify": "^11.0.3",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
