--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "framer-motion": "^11.18.1",
+    "gsap": "^3.12.7",
     "js-cookie": "^3.0.5",
     "motion": "^12.0.1",
     "react": "^18.3.1",
