--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
+    "daisyui": "^4.12.23",
     "framer-motion": "^11.18.1",
     "gsap": "^3.12.7",
     "js-cookie": "^3.0.5",
