--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "googleapis": "^144.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.4",
+    "multer": "^1.4.5-lts.1",
     "resend": "^4.1.1",
     "socket.io": "^4.8.1",
     "zod": "^3.24.1"
