--- a/client/package.json
+++ b/client/package.json
@@ -15,13 +15,14 @@
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "daisyui": "^4.12.23",
-    "framer-motion": "^11.18.1",
+    "framer-motion": "^11.18.2",
     "gsap": "^3.12.7",
     "js-cookie": "^3.0.5",
     "motion": "^12.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
     "react-toastify": "^11.0.3",
