--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,8 @@
     "react-router-dom": "^7.1.3",
     "react-toastify": "^11.0.3",
     "socket.io-client": "^4.8.1",
-    "tailwind-merge": "^2.6.0"
+    "tailwind-merge": "^2.6.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
